# bookhub

./: .gitignore  DevDoc.md  Makefile  README.md
backend/: CMakeLists.txt  nul
backend/include/: server.h  server.hpp  types.h
backend/include/auth/: auth_manager.h  auth_middleware.h
backend/include/database/: database.h  database.hpp
backend/include/handler/: base.h  base.hpp  book.h  user.h  user.hpp
backend/include/handlers/: base.hpp  interface.hpp  users.hpp
backend/include/models/: book.h  user.h  user.hpp
backend/include/repository/: user.h  user.hpp
backend/src/: main.cpp  server.cpp
backend/src/auth/: auth_manager.cpp  auth_middleware.cpp
backend/src/database/: database.cpp
backend/src/handler/: base.cpp  book.cpp  user.cpp
backend/src/handlers/: base.cpp  books.cpp  users.cpp
backend/src/repository/: user.cpp
frontend/my-react-app/: fix-structure.sh  package-lock.json  package.json
frontend/my-react-app/public/: index.html
frontend/my-react-app/src/: App.js
frontend/my-react-app/src/components/Footer/: Footer.jsx
frontend/my-react-app/src/components/Header/: Header.css  Header.jsx
frontend/my-react-app/src/pages/About/: About.css  About.jsx
frontend/my-react-app/src/pages/Home/: Home.jsx
frontend/my-react-app/src/pages/SignIn/: SignIn.css  SignIn.jsx
frontend/my-react-app/src/pages/SignUp/: SignUp.css  SignUp.jsx
frontend/my-react-app/src/translations/: translations.js
scripts/: setup.sh
